--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <a href="#" class="nav__logo">
                     <img src="assets/img/Ll.png" alt="" class="nav__logo-img"> 
                     Газ Центр
-                </a>
-                <a  target="_blank"  href="tel:+79110079944"> +79110079944 </a> 
+                </a>    
+                <a  target="_blank"  href="tel:+79110079944" class="home__social-icon"><i class='bx bxs-phone-call'></i></a>
                 <a target="_blank" href="https://t.me/ruslan_orud" class="home__social-icon"><i class='bx bxl-telegram'></i></a>
                 <a target="_blank" href="https://wa.me/79110079944" class="home__social-icon"><i class='bx bxl-whatsapp' ></i></a> 
                 <div class="nav__menu" id="nav-menu">
@@ -43,6 +43,9 @@
                         </li>
                         <li class="nav__item">
                             <a href="#new" class="nav__link">Примеры  работ</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#map" class="nav__link">Контакты</a>
                         </li>
                     </ul>
 
@@ -73,10 +76,13 @@
                     <img src="assets/img/Gaz.png" alt="" class="home__img">
 
                     <div class="home__data">
-                        <h1 class="home__title">Быстрый и недорогой
-                            ремонт автомобилей Газель <br> в Санкт-Петербурге</h1>
+                        <h1 class="home__title">
+                            <a  target="_blank"  href="tel:+79110079944"> +7 (911) 007-99-44<br> 9:00-20:00 без выходных </a> 
+                           </h1>
                         <p class="home__description">
                            <h4>
+                            Быстрый и недорогой
+                            ремонт автомобилей Газель <br> в Санкт-Петербурге<br>
                                 Выполняем широкий спектр работ, качественно с гарантией и фотоотчетом! </a> 
                             </h4>
                         </p>
@@ -195,7 +201,7 @@
                       
                         
                         <h3 class="gift__price">от 2т</h3>
-                        <span class="gift__title">ремонт рамы</span>
+                        <span class="gift__title">ремонт рамы </span>
                     </article>
                 </div>
             </section>
@@ -251,7 +257,7 @@
             </section>
 
             <!--==================== MAP ====================-->
-            <section class="message section container">
+            <section class="message section container" id="map">
                <h2 class="footer__title"> Наш адрес : Ленинградская область, Всеволожский район, деревня Новое Девяткино, 1-й проезд, уч6 </h2>
                    <div style="position:center;overflow:hidden;border-radius:  0.75rem;margin-top: 40px;" > 
                     <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A2d3c953709e7369eeb55f8cd7f3dc1efc6358154ff1441b267a5f524d55e5e17&amp;source=constructor"
